# korinsic-ai-core

./: .dockerignore  .env.example  .git-tag-instructions.md  .gitignore  .korbit-config.yaml  .korbit.yml  .pre-commit-config.yaml  AWS_SETUP_INSTRUCTIONS.md  CI_CD_PIPELINE_FIX_SUMMARY.md  CLIENT_DQ_GAP_ASSESSMENT_FRAMEWORK.md  CLIENT_GAP_ASSESSMENT_SUMMARY.md  CODEBASE_STRUCTURE_IMPROVEMENTS.md  COMPREHENSIVE_INTEGRATION_SUMMARY.md  CONFLICT_RESOLUTION_SUMMARY.md  CURRENT_STATE_IMPLEMENTATION_SUMMARY.md  CURRENT_STATE_KDE_SCORER.md  DEPENDENCY_MANAGEMENT.md  DEPENDENCY_OPTIMIZATION_SUMMARY.md  DEPLOYMENT_GUIDE.md  DQSI_CALCULATION_METHODOLOGY.md  DQSI_CORRECTED_IMPLEMENTATION_SUMMARY.md  DQSI_Excel_Calculation_Model.csv  DQSI_Excel_Manual_Calculation.md  DQSI_Excel_Template.csv  DQSI_IMPLEMENTATION_SUMMARY.md  Dockerfile  E2E_TEST_SUMMARY.md  EXCEL_DQSI_INSTRUCTIONS.md  EXPLAINABILITY_IMPLEMENTATION_SUMMARY.md  EXPLAINING_AWAY_ENHANCEMENT_PR_SUMMARY.md  FAN_IN_CPT_LIBRARY_IMPACT_ANALYSIS.md  FEATURE_DEVELOPMENT_CHECKLIST.md  FINAL_COMPLIANCE_STATUS.md  FINAL_KORBIT_RESOLUTION_SUMMARY.md  FINAL_VALIDATION_EXECUTION_REPORT.md  FINAL_VALIDATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  KDE_SCORING_MECHANISM_EXPLAINED.md  KORBIT_ISSUES_RESOLUTION_SUMMARY.md  KORBIT_SETUP.md  (+66 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: backend-deploy.yml  ci-cd.yml  ci.yml  e2e-tests.yml  frontend-deploy.yml  lambda-deploy.yml  openinference-ci.yml
archive/: .coverage  bayesian_model_config_backup.json  branches.txt  mailmap.txt  package-lock.json  replace.txt  rewrite_author.bat  rewrite_author.py
bayesian-models/docs/: model_design_notes.md  regulator_justification.md
bayesian-models/explainability/: explain_templates.json
bayesian-models/models/: SpoofingModel.json
bayesian-models/payloads/: spoofing_case_medium.json
config/: README.md  base.json  bayesian_model_config.json  development.json  dq_config.yaml  openinference_config.json  person_centric_surveillance.json  production.json  regulatory_explainability_config.json  testing.json
config/deployment/: docker.json  kubernetes.json
config/models/: bayesian_models.json  economic_withholding_config.json
deployment/: README.md  amplify.yml  aws-infrastructure.yml
docs/: ALL_MODELS_EVIDENCE_MAPPING_SUMMARY.md  ECONOMIC_WITHHOLDING_REFACTORING.md  OPENINFERENCE_INTEGRATION.md  README.md  TESTING_RESULTS.md
docs/analysis/: QATAR_ENERGY_COMMODITY_GAP_ANALYSIS.md  dq_dimensions_analysis.md  qatar_risk_typology_expansion_analysis.md
docs/development/: .git-tag-instructions.md  DYNAMIC_MODEL_SUMMARY.md  ESI_IMPLEMENTATION_SUMMARY.md
docs/dqsi/: README.md
docs/features/: 12.4_dqsi_trust_bucket.md  RAW_TRADING_DATA_FEATURE.md
docs/implementation/: EXPLAINING_AWAY_COMPREHENSIVE_ASSESSMENT.md  IMPLEMENTATION_SUMMARY.md  KORBIT_AI_MERGE_31_ANALYSIS.md  KORBIT_FINDINGS_ACTION_PLAN.md  OPTIMIZED_IMPLEMENTATION_PLAN.md  PHASE1_ENHANCED_DRIFT_DETECTION_COMPLETE.md  PYTHON_DEPENDENCY_FIX.md  WASH_TRADE_DETECTION_IMPLEMENTATION_SUMMARY.md  WASH_TRADE_IMPLEMENTATION_SUMMARY.md
docs/models/: kor_ai_comprehensive_data_model.md
docs/phases/: PHASE2_COMPLETION_REPORT.md  PHASE3_COMPLETION_REPORT.md
docs/plans/: MODEL_ENHANCEMENT_PLAN.md
docs/regulatory_explainability/: COMPLETE_IMPLEMENTATION_GUIDE.md  FIXES_COMPLETE.md  SECURITY_AND_QUALITY_FIXES_SUMMARY.md
docs/reports/: WORKSPACE_CLEANUP_SUMMARY.md
docs/summaries/: BRANCH_CLEANUP_SUMMARY.md  COMPREHENSIVE_FIXES_SUMMARY.md  DEPENDENCY_MANAGEMENT_FIX_SUMMARY.md  ERROR_HANDLING_MAINTAINABILITY_FIXES_SUMMARY.md  KORBIT_FIXES_SUMMARY.md  LATEST_KORBIT_FIXES_SUMMARY.md  OPENINFERENCE_INTEGRATION_SUMMARY.md  REUSABLE_INTERMEDIATE_NODES_SUMMARY.md  TESTING_AND_CICD_SUMMARY.md
examples/: evidence_chain_example.py
outputs/: ew_lineage_compliant_gas_plant.json  ew_lineage_flagged_gas_plant.json
review-files/: OPENINFERENCE_INTEGRATION_SUMMARY.md
review-src/: App.jsx  app.py
review-src/api/: __init__.py
review-src/components/: TopNavBar.jsx
review-src/core/: __init__.py  bayesian_engine.py  data_processor.py  fallback_logic.py  kde_first_dq_calculator.py  kde_first_role_aware_strategy.py
review-src/models/: trading_data.py
review-src/pages/: Dashboard.jsx
review-src/utils/: config_backup.py
review-tests/: README.md  conftest.py
review-tests/e2e/: test_e2e_enhanced.py  test_latent_intent.py  test_openinference_e2e.py
review-tests/fixtures/: dqsi_test_data.py  sample_data.json
review-tests/integration/: test_alert_scoring.py  test_engine_integration.py  test_openinference_integration.py
review-tests/performance/: test_benchmarks.py  test_data_volume.py  test_openinference_performance.py
review-tests/unit/: test_advanced_features.py  test_cross_desk_collusion_model.py  test_dq_sufficiency_index.py  test_dynamic_model.py  test_enhanced_bayesian_engine.py  test_esi_feature.py  test_example_enhanced.py  test_latent_intent.py  test_news_context.py  test_phase3_circular_trading.py  test_quick.py  test_ui_display.py
review-tests/utils/: assertions.py  data_generators.py  mock_factories.py  test_helpers.py
scripts/: README.md  assessment_results.json  check_explainability_integration.py  client_gap_assessment_tool.py  dqsi_config_midtier_investment_bank_20250706_183837.yaml  improved_validation_script.py  integrate_regulatory_explainability.py  mixed_role_dqsi_config_midtier_investment_bank_20250706_185528.yaml  run_ew_lineage.py  run_tests.py  sample_trading_data.csv  simple_kde_demo.py  standalone_kde_scorer.py  validate_explainability_integration.py
scripts/data/: kor_ai_dynamodb_implementation.py
scripts/demo/: advanced_drift_detection_demo.py  dqsi_corrected_implementation_demo.py  dqsi_demo.py  dqsi_role_aware_demo.py  dqsi_simple_demo.py  openinference_demo.py
scripts/deploy/: setup-aws-infrastructure.sh
src/: __init__.py  app.py  index.css  main.jsx
tests/: README.md  conftest.py  test_fan_in_reduction.py  test_person_centric_surveillance.py  test_regulatory_compliance.py  test_regulatory_explainability_integration.py  test_sample_data.py
(+259 files in other folders)
